--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@
   }
 }
 
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +36,357 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  text-align: center;
+}
+.item-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2em;
+
+}
+.card {
+  text-align: left;
+  padding: 10px;
+  border-radius: 5px;
+  padding: 1em;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+ 
+
+}
+img {
+  height: auto;
+  width: 100%;
+}
+
+#navbar{
+  width:100%;
+}
+
+#input{
+  height:40px;
+}
+
+#button{
+  height:50px;
+  width: 300px;
+  background-color: black;
+  color:white
+}
+#adddonor{
+  margin-top:10px;
+  width:60%;
+  color:white;
+ 
+}
+
+#Messageerror{
+  margin-left:300px;
+}
+
+#appointment{
+  margin-left:450px;
+  color:red !important;
+}
+
+#adddrive{
+  margin-top:10px;
+  margin-left:640px;
+  width:50%;
+  color:white
+}
+
+#requestheader{
+  padding-left:190px;
+
+}
+
+#bookheader{
+  padding-left:190px;
+}
+
+#bookbutton{
+  padding-left:50px;
+}
+
+#requestbutton{
+ margin-left:70px;
+  background-color:black;
+  color:white;
+}
+
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width:100%;
+  height:100%;
+ 
+  
+}
+
+#label{
+  color:white;
+  font-size:medium;
+  font-weight:bold;
+}
+.App1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width:100%;
+  height:100%;
+  
+}
+.information {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  width:100%;
+
+
+}
+.information1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height:100%;
+
+
+}
+input {
+  width: 300px;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+  margin: 5px;
+
+}
+
+ button {
+  width: 320px;
+  height: 50px;
+  margin-top: 15px;
+} 
+
+ button:hover {
+  cursor: pointer;
+}
+
+.inventories {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  font-size:15px;
+  
+}
+.drives {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  font-size:15px;
+  
+}
+.inventories {
+  width:100%;
+  height: 100%;
+  border: 1.5px solid black;
+  margin: 3px;
+  padding: 10px;
+  font-family:'Times Roman';
+  font-size:15px;
+  margin-left:3px;
+  margin-top:30px;
+  
+}
+.drives {
+  width: 100%;
+  height: 100%;
+  border: 1.5px solid black;
+  margin: 5px;
+  padding: 10px;
+  font-family:'Times Roman';
+  font-size:15px;
+  margin-left:5px;
+  margin-top:30px;
+  
+}
+.inventories h3 {
+  margin: 20px;
+}
+
+#inputdate{
+  margin-left:10px;
+}
+.drives h3 {
+  margin: 20px;
+}
+.nav1{
+  color:white;
+  font-size:medium;
+  font-size:17px;
+  text-decoration: None;
+  margin-left:10px;
+  margin-right:19px;
+  height:100%;
+  float:left;
+}
+
+#blooddonation{
+  width:100%;
+  height:100%;
+}
+#donorheading{
+  color:red;
+}
+
+#driveheading{
+  color:red;
+}
+
+#updatebutton{
+margin:10px;
+height:50px;
+width: 300px;
+background-color:black;
+color:white;
+}
+#deletebutton{
+margin:10px;
+height:50px;
+  width: 300px;
+  background-color:black;
+color:white;
+}
+
+#donor{
+  margin-left:15px;
+  margin-right:30px;
+  margin-top:30px;
+  margin-bottom:15px;
+  width:98%;
+  
+}
+
+h2{
+  margin-left:500px;
+}
+
+
+@media screen and (max-width:366px) 
+{
+
+  .nav1{
+  margin-left:125px;
+  }
+  #adddonor{
+    width:100%;
+    
+  }
+  #donor{
+    width:100%;
+    margin-left:0px;
+  }
+  h2{
+    margin-left:100px;
+  }
+  #tabledonor{
+  width:100%;
+  }
+  #tabledrive{
+    width:100%;
+  }
+  #adddrive{
+    width:100%;
+    margin-left:0px;
+  }
+
+  #input{
+   width:250px;
+   margin-left:5px;
+  }
+
+  #updatebutton{
+    width:250px;
+    
+  }
+
+  #deletebutton{
+    width:250px;
+  }
+
+  #inputdate{
+    width:250px;
+  }
+
+
+  #appointment{
+    margin-left:100px;
+  }
+} 
+
+
+  @media screen and (max-width:768px) and (min-width:367px)
+{
+  .nav1{
+    margin-left:150px;
+    }
+    #adddonor{
+      width:100%;
+    }
+    #donor{
+      width:100%;
+      margin-left:0px;
+      
+      
+    }
+    
+    h2{
+      margin-left:250px;
+    }
+    #tabledonor{
+    width:100%;
+   
+    }
+    
+    #tabledrive{
+      width:100%;
+    }
+    #adddrive{
+      width:100%;
+      margin-left:0px;
+    }
+  
+    #input{
+     width:250px;
+     margin-left:5px;
+    }
+  
+    #updatebutton{
+      width:250px;
+      
+    }
+  
+    #deletebutton{
+      width:250px;
+    }
+  
+    #inputdate{
+      width:250px;
+    }
+
+    #appointment{
+      margin-left:250px;
+    }
+    
 }
