--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -1439,6 +1438,7 @@ section {
 .contact .php-email-form {
   width: 100%;
   background: #fff;
+  background-color: #fff;
 }
 
 .contact .php-email-form .form-group {
@@ -1664,6 +1664,17 @@ section {
   background: #1c84e3;
 }
 
+/*--------------------------------------------------------------
+# find blood centre page
+--------------------------------------------------------------*/
+.pickup-table{
+  width: 70% !important;
+  margin-left: 15%;
+}
+.pickup-alert{
+  display: none;
+}
+
 #footer .credits {
   padding-top: 5px;
   font-size: 13px;
@@ -1689,4 +1700,30 @@ section {
   background: #1c84e3;
   color: #fff;
   text-decoration: none;
+}
+
+/*--------------------------------------------------------------
+# donor requirements
+--------------------------------------------------------------*/
+.about-section{
+  padding: 0px !important;
+}
+
+.about-donor{
+ margin-left: 10% !important;
+}
+
+.req-box{
+  width : 90% !important;
+}
+.donorpageabout{
+  padding: none !important;
+}
+
+.desc-donor, .title-donor{
+  text-align: left;
+}
+
+.page-footer{
+  box-shadow: 0px 2px 15px #c61010;
 }
